@@ -2,6 +2,13 @@
 Demnächst anschauen
 ----------------------------------------------------------------------
 
+Doppelte Mail bei verpasstem Anruf, einmal ohne, einmal mit Semikolon (?)
+
+Schnelle Benachrichtung ohne Rückwärtssuche; dann "Vervollständigung" der
+Informationen?
+
+Diagnoseseite
+
 Rückwärtssuche 0201777989: Nur einer von zwei Einträgen kommt durch. Liegt es
 an dem speziellen Format des gewerblichen Eintrags?
 
